changing links fixing animation start deleting line from background

--- a/index.html
+++ b/index.html
@@ -119,58 +119,56 @@
           </section>
           <section class="book-items-list-wrap"> 
             <div class="book-items-list">
-              <div class="book-item book-item--1" id="book-item--1">
+              <div class="book-item book-item--1">
+                <div class="book-item-text-wrap"> 
+                  <h2 class="book-item-text__title">інтерактивний підручник розроблено:</h2>
+                  <p class="book-item-text__descr">БУЦИК АНАСТАСІЄЮ</p><a class="book-item-text__btn" href="#book-item--2">до підручника</a>
+                </div>
+                <div class="book-item-video-wrap"> <img class="book-item-img" src="./assets/images/cat-end.jpeg" alt=""></div>
+              </div>
+              <div class="book-item book-item--reverse book-item--2" id="book-item--2">
                 <div class="book-item-text-wrap"> 
                   <h2 class="book-item-text__title">Знайомство з комп’ютерними мережами</h2>
-                  <p class="book-item-text__descr">Комп`ютерна мережа, це два або більше комп`ютера, які обмінюються інформацією по лініям зв`язку. </p><a class="book-item-text__btn" href="#book-item--2">до наступного розділу</a>
+                  <p class="book-item-text__descr">Комп`ютерна мережа, це два або більше комп`ютера, які обмінюються інформацією по лініям зв`язку. </p><a class="book-item-text__btn" href="#book-item--3">до наступного розділу</a>
                 </div>
                 <div class="book-item-video-wrap"> 
                   <video class="book-item-video" controls src="./assets/images/znayomstvo.mp4"> </video>
                 </div>
               </div>
-              <div class="book-item book-item--reverse book-item--2" id="book-item--2">
+              <div class="book-item book-item--3" id="book-item--3">
                 <div class="book-item-text-wrap"> 
                   <h2 class="book-item-text__title">Фізичний рівень</h2>
-                  <p class="book-item-text__descr">Фізичний рівень займає особливе місце в будь-якій мережевій архітектурі, оскільки саме на цьому рівні відбувається реальний перенос інформації від комп'ютера до комп'ютера.</p><a class="book-item-text__btn" href="#book-item--3">до наступного розділу</a>
+                  <p class="book-item-text__descr">Фізичний рівень займає особливе місце в будь-якій мережевій архітектурі, оскільки саме на цьому рівні відбувається реальний перенос інформації від комп'ютера до комп'ютера.</p><a class="book-item-text__btn" href="#book-item--4">до наступного розділу</a>
                 </div>
                 <div class="book-item-video-wrap"> 
                   <video class="book-item-video" controls src="./assets/images/physical-level.mp4"></video>
                 </div>
               </div>
-              <div class="book-item book-item--3 book-item--even" id="book-item--3">
+              <div class="book-item book-item--reverse book-item--4 book-item--even" id="book-item--4">
                 <div class="book-item-text-wrap"> 
                   <h2 class="book-item-text__title">Канальний рівень</h2>
-                  <p class="book-item-text__descr">Канальний рівень розглядає передачу даних від комп'ютера до комп'ютера у вигляді кадрів даних</p><a class="book-item-text__btn" href="#book-item--4">до наступного розділу</a>
+                  <p class="book-item-text__descr">Канальний рівень розглядає передачу даних від комп'ютера до комп'ютера у вигляді кадрів даних</p><a class="book-item-text__btn" href="#book-item--5">до наступного розділу</a>
                 </div>
                 <div class="book-item-video-wrap"> 
                   <video class="book-item-video" controls src="./assets/images/kanalniy.mp4"> </video>
                 </div>
               </div>
-              <div class="book-item book-item--reverse book-item--4" id="book-item--4">
+              <div class="book-item book-item--5" id="book-item--5">
                 <div class="book-item-text-wrap"> 
                   <h2 class="book-item-text__title">Мережевий рівень</h2>
-                  <p class="book-item-text__descr">Основними задачами мережевого рівня є: глобальна адресація, визначення шляхів доставки пакетів (маршрутизація) та розбиття інформаційних пакетів на фрагменти, які можуть бути доставлені через канальний рівень. </p><a class="book-item-text__btn" href="#book-item--5">до наступного розділу</a>
+                  <p class="book-item-text__descr">Основними задачами мережевого рівня є: глобальна адресація, визначення шляхів доставки пакетів (маршрутизація) та розбиття інформаційних пакетів на фрагменти, які можуть бути доставлені через канальний рівень. </p><a class="book-item-text__btn" href="#book-item--6">до наступного розділу</a>
                 </div>
                 <div class="book-item-video-wrap"> 
                   <video class="book-item-video" controls src="./assets/images/merejeviy.mp4"> </video>
                 </div>
               </div>
-              <div class="book-item book-item--5 book-item--even" id="book-item--5">
+              <div class="book-item book-item--reverse book-item--6 book-item--even" id="book-item--6">
                 <div class="book-item-text-wrap"> 
                   <h2 class="book-item-text__title">Транспортний рівень</h2>
-                  <p class="book-item-text__descr">Завдання транспортного рівня не тільки у тому, щоб доставити дані на потрібний комп'ютер, а й передати їх конкретному програмному додатку. </p><a class="book-item-text__btn" href="#book-item--6">до наступного розділу</a>
+                  <p class="book-item-text__descr">Завдання транспортного рівня не тільки у тому, щоб доставити дані на потрібний комп'ютер, а й передати їх конкретному програмному додатку. </p><a class="book-item-text__btn" href="#book-item--7">до наступного розділу</a>
                 </div>
                 <div class="book-item-video-wrap"> 
                   <video class="book-item-video" controls src="./assets/images/transportniy.mp4"></video>
-                </div>
-              </div>
-              <div class="book-item book-item--reverse book-item--6" id="book-item--6">
-                <div class="book-item-text-wrap"> 
-                  <h2 class="book-item-text__title">Прикладний рівень</h2>
-                  <p class="book-item-text__descr">Прикладний рівень – це програми, розроблені для кінцевого користувача. А також програмні інтерфейси між програмами та користувачем.</p><a class="book-item-text__btn" href="#book-item--7">до наступного розділу</a>
-                </div>
-                <div class="book-item-video-wrap"> 
-                  <video class="book-item-video" controls src="./assets/images/prykladnyi.mp4"> </video>
                 </div>
               </div>
               <div class="book-item book-item--center book-item--7" id="book-item--7">
@@ -224,21 +222,23 @@
                   </div>
                 </div>
               </div>
-              <div class="book-item book-item--reverse book-item--8" id="book-item--8">
+              <div class="book-item book-item--8" id="book-item--8">
+                <div class="book-item-text-wrap"> 
+                  <h2 class="book-item-text__title">Прикладний рівень</h2>
+                  <p class="book-item-text__descr">Прикладний рівень – це програми, розроблені для кінцевого користувача. А також програмні інтерфейси між програмами та користувачем.</p><a class="book-item-text__btn" href="#book-item--9">до наступного розділу</a>
+                </div>
+                <div class="book-item-video-wrap"> 
+                  <video class="book-item-video" controls src="./assets/images/prykladnyi.mp4"> </video>
+                </div>
+              </div>
+              <div class="book-item book-item--reverse book-item--9" id="book-item--9">
                 <div class="book-item-text-wrap"> 
                   <h2 class="book-item-text__title">Переміщення по мережі</h2>
-                  <p class="book-item-text__descr">Набір протоколів нижньоприкладного рівня утворює, так званий Stack протоколів. Мережеві протоколи переміщують дані по мережі. </p><a class="book-item-text__btn" href="#book-item--9">до наступного розділу</a>
+                  <p class="book-item-text__descr">Набір протоколів нижньоприкладного рівня утворює, так званий Stack протоколів. Мережеві протоколи переміщують дані по мережі. </p><a class="book-item-text__btn" href="#book-item--2">до початку</a>
                 </div>
                 <div class="book-item-video-wrap"> 
                   <video class="book-item-video" controls src="./assets/images/peremischennya.mp4"></video>
                 </div>
-              </div>
-              <div class="book-item book-item--reverse book-item--9">
-                <div class="book-item-text-wrap"> 
-                  <h2 class="book-item-text__title">Дякую, що передивились інтерактивний підручник</h2>
-                  <p class="book-item-text__descr">РОЗРОБНИК: БУЦИК АНАСТАСІЯ</p><a class="book-item-text__btn" href="#book-item--1">на початок</a>
-                </div>
-                <div class="book-item-video-wrap"> <img class="book-item-img" src="./assets/images/cat-end.jpeg" alt=""></div>
               </div>
             </div>
           </section>
